--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/ChiriacCatalin/Back-end#readme",
   "dependencies": {
     "@google-cloud/firestore": "^5.0.2",
+    "@google-cloud/storage": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
